syntax = "proto3";
//  最后一个参数是生成的文件的包名
option go_package = "/pb";

message User {
  int64 id = 1;
  string name = 2;
  string avatar = 3;
  // 字典
  map<string, string> attributes = 4;
  // 列表
  repeated string nicknames = 5;
  // 可以为空
  optional int32 age = 6;

  Address address = 8;

  // 每次只能是二者其一  不推荐使用该方式
  oneof contacts {
    string email = 9;
    string phone = 10;
  }

  Gender gender = 11;
}

message Address {
  string province = 1;
  string city = 2;
}

// 枚举
enum Gender{
  UNKNOWN = 0;
  MALE = 1;
  FEMALE = 2;
}


message GetByIdRequest{
  int64 id = 1;
}

message GetByIdResponse{
  User user = 1;
}

service UserService {
  rpc GetById(GetByIdRequest) returns(GetByIdResponse);
}

